Fix display problem on IE for circle-chart

--- a/mon-pix/app/styles/components/_circle-chart.scss
+++ b/mon-pix/app/styles/components/_circle-chart.scss
@@ -64,4 +64,5 @@
   width: 100%;
   height: 100%;
   top: 0;
+  left: 0;
 }
